--- a/Projet_1/index.html
+++ b/Projet_1/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
+
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="Projet_css.css">
+		<link rel="stylesheet" href="css/index.css">
 		<title>Présentation du CV en HTML/CSS</title>
 	</head>
 
 	<body>
 
+		<div class="banniere"></div>
+
 		<div class="coordonnees">
-			<p>Nicolas Ventre<br>
-			   25 ans<br>
-			   38 rue Nationale Poste Restante<br>
-			   18200 Saint-Amand-MD<br>
-			   07.82.28.73.21<br>
-			   Nicolas.Ventre@outlook.fr<br>
-			   Permis de conduire : B</p>
+			<ul>
+				<li>Nicolas Ventre</li>
+			    <li>25 ans</li>
+			    <li>38 rue Nationale Poste Restante</li>
+			    <li>18200 Saint-Amand-MD</li>
+			    <li>07.82.28.73.21</li>
+			    <li>Nicolas.Ventre@outlook.fr</li>
+			    <li>Permis de conduire : B</li>
+			</ul>
 		</div>
 
 		<div class="contenu">
@@ -39,44 +44,40 @@
 				<li>Utilisation d'appareil de mesure</li>
 				<li>Technique de taille des végétaux</li>
 
-			</ul>
-		
-
+			</ul><br>
 		
 			<h3>Expériences professionnelles</h3>
 			
 			<ul>
-				<li>10/2017<br>
+				<li>10/2017
 				    Manoeuvre en menuiserie pour CBM (St-pierre les Etieux 18)</li>
-				<li>09/2017<br>
+				<li>09/2017
 				    Manoeuvre batiment pour DB Centre (Bourges18)</li>
-				<li>01/2017 - 06/2017<br>
+				<li>01/2017 - 06/2017
                     Agent entretien de matériels de location travaux publics pour Solomat Location (Bourges 18)</li>
-				<li>12/2016<br>
+				<li>12/2016
 					Manoeuvre pour Carbo-Briq (Braize 03)</li>
-				<li>10/2016<br>
+				<li>10/2016
 					Manoeuvre pour Duvets coeur de France (Bruère-Allichamps 18)</li>
-				<li>06/2016 - 07/2016<br>
+				<li>06/2016 - 07/2016
 					Manoeuvre bâtiment pour Prodyelec (Bourges 18)</li>
-				<li>05/2016<br>
+				<li>05/2016
 					Employé de production/conditionnement pour Flamant Vert (Bourges 18)</li>
-				<li>04/2016<br>
+				<li>04/2016
 					Agent d'orientation pour le Printemps de Bourges (Bourges 18)</li>
-				<li>03/2016 - 04/2016<br>
+				<li>03/2016 - 04/2016
 					Agent de nettoyage pour HEI (Clermont-Ferrand 63)</li>
-				<li>06/2015 - 12/2015<br>
+				<li>06/2015 - 12/2015
 					Agent entretien espaces verts pour ASER (Sancoins 18) et SOS Travail (St-Amand 18)</li>
-				<li>07/2014<br>
+				<li>07/2014
 					Agent d'entretien des massifs et autres végétaux pour la mairie de Valensole (Valensole 04)</li>
-			</ul>
-		
+			</ul><br>
 
-		
 			<h3>Formation/diplômes</h3>
 
 			<ul>
-				<li><strong>2018: Formation informatique : Acquérir les 1ers gestes professionnels des métiers de l'informatique et du numérique</strong><br></li>
-				<li>Juin 2013: Bac PRO MEI (maintenance des équipements industriels)<br></li>
+				<li><strong>2018: Formation informatique : Acquérir les 1ers gestes professionnels des métiers de l'informatique et du numérique</strong></li>
+				<li>Juin 2013: Bac PRO MEI (maintenance des équipements industriels)</li>
 				<li>Juin 2011: Certification intermédiaire (anciennement BEP MSMA)</li>
 			</ul>
 
